# federated_node_ai

./: .dockerignore  .gitignore  ARGOCD.md  CHANGELOG.md  DEPLOYMENT.md  Makefile  Pipfile  README.md
webserver/: .coverage  Makefile  Pipfile  README.md  build_and_send.sh  docker-compose-tests-ci.yaml  docker-compose-tests.yaml  docker-compose.yaml  pylint-entrypoint.sh  pylintrc  pyproject.toml  run_tests.sh  setup.cfg  test-entrypoint.sh  vuln.sh
webserver/app/: -f  .coverage  Pipfile  __init__.py  admin.py  admin_api.py  alembic.ini  containers_api.py  datasets.py  datasets_api.py  exceptions.py  fn_flask.py  main.py  registries_api.py  requests.py  requests_api.py  tasks.py  tasks_api.py  users_api.py
webserver/app/helpers/: acr.py  audit.py  backround_task.py  base_model.py  connection_string.py  const.py  container_registries.py  db.py  exceptions.py  fetch_data_container.py  keycloak.py  kubernetes.py  (+5 more)
webserver/artifacts/: coverage.xml
webserver/migrations/: README  env.py
webserver/tests/: base_test.py  conftest.py  test_acr_helper.py  test_admin.py  test_audit.py  test_audits.py  test_catalogues.py  test_container_registries_helper.py  test_containers.py  test_containers_azure_registries_helper.py  test_containers_dockerhub_registries_helper.py  test_containers_github_registries_helper.py  test_datasets.py  test_delivery_secret.py  test_dictionaries.py  test_filtering.py  test_keycloak_helper.py  test_kubernetes_helper.py  test_main.py  test_pagination.py  test_registries.py  test_requests.py  test_tasks.py  test_token_transfer.py  test_users.py
(+177 files in other folders)
